--- a/portfolio/portfolio.tex
+++ b/portfolio/portfolio.tex
@@ -22,7 +22,12 @@
 
 %%% Protokoll: Beginn
 
-%\input{abschnitte/aufgabe02.tex}
+%\input{abschnitte/aufgabe01.tex}
+\input{abschnitte/aufgabe02.tex}
+\input{abschnitte/aufgabe03.tex}
+\input{abschnitte/aufgabe04.tex}
+\input{abschnitte/aufgabe05.tex}
+\input{abschnitte/aufgabe07.tex}
 
 \printbibliography
 
