add aufgabe 1 and 3

--- a/portfolio/portfolio.tex
+++ b/portfolio/portfolio.tex
@@ -23,11 +23,11 @@
 %%% Protokoll: Beginn
 
 \input{abschnitte/aufgabe01.tex}
-\input{abschnitte/aufgabe02.tex}
+%\input{abschnitte/aufgabe02.tex}
 \input{abschnitte/aufgabe03.tex}
 \input{abschnitte/aufgabe04.tex}
 \input{abschnitte/aufgabe05.tex}
-\input{abschnitte/aufgabe06.tex}
+%\input{abschnitte/aufgabe06.tex}
 \input{abschnitte/aufgabe07.tex}
 \input{abschnitte/aufgabe08.tex}
 \input{abschnitte/aufgabe09.tex}
