--- a/portfolio/portfolio.tex
+++ b/portfolio/portfolio.tex
@@ -27,7 +27,7 @@
 \input{abschnitte/aufgabe03.tex}
 \input{abschnitte/aufgabe04.tex}
 \input{abschnitte/aufgabe05.tex}
-%\input{abschnitte/aufgabe06.tex}
+\input{abschnitte/aufgabe06.tex}
 \input{abschnitte/aufgabe07.tex}
 \input{abschnitte/aufgabe08.tex}
 \input{abschnitte/aufgabe09.tex}
