--- a/portfolio/abschnitte/aufgabe03.tex
+++ b/portfolio/abschnitte/aufgabe03.tex
@@ -3,7 +3,7 @@ Schreiben Sie einen Aufsatz über eine Persönlichkeit der Informatik. Dieser Au
 \\
 Konrad Zuse und seine Errungenschaften
 Konrad Ernst Otto Zuse war ein deutscher Bauingenieur, Erfinder und Unternehmer der Zuse KG. Konrad Zuse wurde am 22. Juni 1910 in Deutsch-Wilmersdorf geboren und starb am 18. Dezember 1995 in Hünfeld. Zuse baute 1941 „den ersten funktionstüchtigen, vollautomatischen, programmgesteuerten und frei programmierbaren, in binärer Gleitkommarechnung arbeitenden Rechner und somit den ersten funktionsfähigen Computer der Welt“(Wiki, 2021).
-Aufgrund der monotonen und mühseligen Berechnungen im Bauingenieurwesen, wollte Zuse diese Arbeit automatisieren. Er entschloss sich 1935, seinen Beruf als Statiker zu kündigen und widmete sich der Entwicklung eines mechanischen Gehirns. 1937 wurde der erste mechanische Rechner Z1 fertiggestellt und basierte auf dem Binärsystem. Zusätzlich besaß der Z1„ein Ein-/Ausgabewerk, ein Rechenwerk, ein Speicherwerk und ein Programmwerk, das die Programme von gelochten Kinofilmstreifen ablas“(Wiki, 2021). Zuse entwickelte Methoden auf der Grundlage von Mantisse und Exponenten, dies Ermöglichte dem Z1 mit Gleitkommazahlen zu arbeiten (vgl. Wiki, 2021). Aufgrund der Unzuverlässigkeit des Z1, musste Zuse eine Alternative für die Schaltelemente finden.  Dadurch entstand der Z2 welcher nun Relais verwendet. 1941 wurde der Z3 vollendet welcher der erste elektrisch Programmiergare Computer der Welt war, welcher aber 1943 bei einem Bombenangriff zerstört wurde (vgl. Mark und Eniac, 2900).
+Aufgrund der monotonen und mühseligen Berechnungen im Bauingenieurwesen, wollte Zuse diese Arbeit automatisieren. Er entschloss sich 1935, seinen Beruf als Statiker zu kündigen und widmete sich der Entwicklung eines mechanischen Gehirns. 1937 wurde der erste mechanische Rechner Z1 fertiggestellt und basierte auf dem Binärsystem. Zusätzlich besaß der Z1„ein Ein-/Ausgabewerk, ein Rechenwerk, ein Speicherwerk und ein Programmwerk, das die Programme von gelochten Kinofilmstreifen ablas“(Wiki, 2021). Zuse entwickelte Methoden auf der Grundlage von Mantisse und Exponenten, dies Ermöglichte dem Z1 mit Gleitkommazahlen zu arbeiten (vgl. Wiki, 2021). Aufgrund der Unzuverlässigkeit des Z1, musste Zuse eine Alternative für die Schaltelemente finden.  Dadurch entstand der Z2 welcher nun Relais verwendet. 1941 wurde der Z3 vollendet welcher der erste elektrisch Programmiergare Computer der Welt war, welcher aber 1943 bei einem Bombenangriff zerstört wurde. Währen des Zweiten Weltkrieges wurde von Zuse eine Erweiterung des Z3 gebaut. Welcher in den letzten Kriegsmonaten im Algäu versteckt wurde. Am Ende wurde der Z4 dann an die technische Hochschule Zürich verkauft. (vgl. Mark und Eniac, 2900)
 
 \begin{lstlisting}
 	https://de.wikipedia.org/w/index.php?title=Konrad_Zuse&oldid=204389120
