--- a/portfolio/portfolio.tex
+++ b/portfolio/portfolio.tex
@@ -31,6 +31,8 @@
 \input{abschnitte/aufgabe07.tex}
 \input{abschnitte/aufgabe08.tex}
 \input{abschnitte/aufgabe09.tex}
+\input{abschnitte/aufgabe10.tex}
+%\input{abschnitte/aufgabe11.tex}
 
 \printbibliography
 
