--- a/portfolio/abschnitte/aufgabe10.tex
+++ b/portfolio/abschnitte/aufgabe10.tex
@@ -1,6 +1,6 @@
 \section{Automaten}
-Schreiben Sie einen Aufsatz zum Thema „Automaten“. Dieser Aufsatz sollte maximal 3000 Zeichen lang sein (ca. zwei DIN A4 Seiten).
-
+Schreiben Sie einen Aufsatz zum Thema „Automaten“. Dieser Aufsatz sollte maximal 3000 Zeichen lang sein (ca. zwei DIN A4 Seiten).\\
+\\
 Automaten
 Ein Automat ist ein Bestandteil der Informatik. Es is egal, ob ein System sinnvoll oder gar möglich ist zu bauen. Mithilfe eines Automaten kann das Verhalten leichter verstanden werden. Im Prinzip ist das Verhalten eines Automaten immer gleich. „Der Automat befindet sich in einem bestimmten Zustand. Jedes Mal, wenn ein Eingabezeichen eintrifft, kann sich abhängig vom Eingabezeichen und dem gegenwärtigen Zustand ein neuer Zustand, der Folgezustand, einstellen.“ (Automat, 2021)
 Es wird unterschieden zwischen einen Deterministischen und nichtdeterministischen Automaten. Bei einem  Deterministischen Automaten treten nur definierte und reproduzierbare Zustände auf. Das heißt, wenn ich ein Wort einlese, werden die selben Zustände durchlaufen und ich bekomme so am ende die selbe Ausgabe. „Der Begriff Determinismus ist vom Begriff Determiniertheit zu unterscheiden: Ein deterministischer Algorithmus ist immer determiniert, d. h., er liefert bei gleicher Eingabe immer die gleiche Ausgabe“. (Determinismus, 2021) Andersherum gilt dies nicht. Zum Beispiel ist der Quicksort nicht-deterministisch, weil dessen Zwischenergebnisse sich stets unterscheiden, jedoch ist das Ergebnis nach der Terminierung immer identisch. (vgl, Determinismus, 2021) 
