--- a/portfolio/portfolio.tex
+++ b/portfolio/portfolio.tex
@@ -34,6 +34,8 @@
 \input{abschnitte/aufgabe10.tex}
 %\input{abschnitte/aufgabe11.tex}
 
+\input{abschnitte/reflexion.tex}
+
 \printbibliography
 
 %%% Protokoll: Ende
