update apa notation

--- a/portfolio/abschnitte/aufgabe02.tex
+++ b/portfolio/abschnitte/aufgabe02.tex
@@ -2,18 +2,18 @@
 Schreiben Sie einen Aufsatz zum Thema „Was ist Informatik“. Dieser Aufsatz sollte maximal 1500 Zeichen lang sein (ca. eine DIN A4 Seite).\\
 \\
 Was ist Informatik	
-Der Begriff Informatik setzt sich aus dem Wort Information und Automatik zusammen. „Die Kernaufgabe der Informatik befasst sich generell mit der Speicherung, Verarbeitung, Darstellung aber auch mit der Übertragung von Informationen.“ (Informatik Aufgaben. 2021) 
+Der Begriff Informatik setzt sich aus dem Wort Information und Automatik zusammen. „Die Kernaufgabe der Informatik befasst sich generell mit der Speicherung, Verarbeitung, Darstellung aber auch mit der Übertragung von Informationen.“ (Alphajump, 2021) 
 Zudem gibt es verschiedene Bereiche in der Informatik, wie die 
-Theoretische Informatik, welche das Rückgrat bildet. Sie befasst sich mit den abstrakten und mathematikorientieren Aspekten der Informatik. Dazu zählen die Automatentheorie, Berechenbarkeitstheorie, Komplexitätstheorie und Quantencomputer. 
+Theoretische Informatik, welche das Rückgrat bildet. Sie befasst sich mit den abstrakten und Mathematikorientieren Aspekten der Informatik. Dazu zählen die Automatentheorie, Berechenbarkeitstheorie, Komplexitätstheorie und Quantencomputer. 
 Bei der Praktischen Informatik geht es um die Entwicklung von Konzepten und Methoden zur Problemlösung in der realen Welt. Dabei ist eines der zentralen Themen die Softwaretechnik wo Konzepte für große Softwareprojekte entworfen werden. 
-In der Technischen Informatik befasst man sich hauptsächlich mit den hardwareseitigen Grundlagen. (vgl, Informatik. 2021) Dazu zählen „[…] Mikroprozessortechnik, Rechnerarchitektur, eingebetteten und Echtzeitsystemen, Rechnernetzen.“ (Informatik. 2021) 
-Auch ein sehr wichtiges Teilgebiet ist die Angewandte Informatik. Denn sie Beschäftigt sich mit der Anwendung in Informatikfremden Gebieten, wie die Biologie, Betriebswirtschaft und Medizin. Entsprechende Bereiche könnten die Computergrafik, Simulation und Datenverarbeitung sein.
-(vlg, Angewandte Informatik. 2021) Zudem haben Informatiksysteme eine starke Auswirkung auf unsere heutige Gesellschafft. 
+In der Technischen Informatik befasst man sich hauptsächlich mit den hardwareseitigen Grundlagen. (vgl, Informatik. 2021) Dazu zählen „Mikroprozessortechnik, Rechnerarchitektur, eingebetteten und Echtzeitsystemen, Rechnernetzen.“ (Informatik, 2021) 
+Auch ein sehr wichtiges Teilgebiet ist die Angewandte Informatik. Denn sie Beschäftigt sich mit der Anwendung in Informatik fremden Gebieten, wie die Biologie, Betriebswirtschaft und Medizin. Entsprechende Bereiche könnten die Computergrafik, Simulation und Datenverarbeitung sein.
+(vlg, Angewandte Informatik, 2021) Zudem haben Informatiksysteme eine starke Auswirkung auf unsere heutige Gesellschaft. 
+
 
 \begin{lstlisting}
-	https://www.alphajump.de/karriereguide/beruf/aufgaben-informatik
-	https://de.wikipedia.org/wiki/Informatik
-	https://de.wikipedia.org/wiki/Angewandte_Informatik
-
-	https://www.uni-halle.de/informatik/
+	Alphajump. (14. Mai 2018). Aufgaben der Informatik. Abgerufen am 3. Februar 2021, unter https://www.alphajump.de/karriereguide/beruf/aufgaben-informatik
+	Informatik. (6. Januar 2021). In Wikipedia. Abgerufen am 3. Februar 2021, unter https://de.wikipedia.org/wiki/Informatik
+	Angewandte Informatik. (17. Juli 2020). In Wikipedia. Abgerufen am 3. Februar 2021, unter https://de.wikipedia.org/wiki/Angewandte_Informatik
+	%Prof. Dr. Paul Molitor. (25. November 2019). Informatik ist überall. Abgerufen am 3. Februar 2021, unter https://www.uni-halle.de/informatik/
 \end{lstlisting}
