--- a/portfolio/abschnitte/aufgabe06.tex
+++ b/portfolio/abschnitte/aufgabe06.tex
@@ -2,15 +2,14 @@
 Schreiben Sie einen Aufsatz zum Thema „UML“. Dieser Aufsatz sollte maximal 3000 Zeichen lang sein (ca. zwei DIN A4 Seiten).\\
 \\
 UML
-Währen der Blüte der Objekt orientierten Programmierung in den 1990er Jahren, kamen vermehrt Vorschläge für eine Modellierungssprache. Dazu haben sich die drei Grady Booch, Ivar Jacobson und James Rumbaugh. Sie hatten schon ihre eigenen Modellierungssprachen entworfen, nun haben sich zusammensetzten und daraus ein Konzept der UML entwickelten. 
-Die UML oder auch Unified Modeling Language ist eine Objektorientierte Sprache und besitzt Notationen zur Beschreibung von Softwaresystemen. Der Grundgedanke hierbei, ist eine einheitliche Notation für alle Softwaresysteme. Sie dient zur “Spezifikation, Konstruktion, Dokumentation und Visualisierung von Software-Teilen und anderen Systemen“ (UML, 2020). In der UML gibt es Notaktionselemente, aus denen sich verschiedene Diagramme erzeugen lassen. Im Jahre 1999 stieß OMG die Entwicklung von UML 2.0 an.  Dabei verdeutlicht jedes Diagramm eine bestimmte Perspektive auf das zu modellierende System und kann dem Entwickler, oder Nutzer einen guten Überblick auf die Software verschaffen.
-Es gibt verschiedene Modellierungssprachen, wie das Aktivitätsdiagramm welches die Ablaufmöglichkeiten eines Systems beziehungsweise Anwendungsfalls mit Aktionen darstellt. Wobei eine Aktion einen einzelnen schritt darstellt und mit Kanten wird der Kontrollfluss angegeben.
+Während der Blüte der Objekt orientierten Programmierung in den 1990er Jahren, kamen vermehrt Vorschläge für eine Modellierungssprache. Die drei Grady Booch, Ivar Jacobson und James Rumbaugh hatte bereits ihre eigene Modellierungssprache entwickelt. Während sie zusammen bei Rational Software beschäftigt waren, kam ihnen kam die Idee, die verschiedenen Notationssysteme zusammenzuführen. Als Resultat entstand die UML. Die UML oder auch Unified Modeling Language ist eine Objektorientierte Sprache und besitzt Notationen zur Beschreibung von Softwaresystemen. Der Grundgedanke hierbei, ist eine einheitliche Notation für alle Softwaresysteme. (vgl. UML, 2021) Sie dient zur “Spezifikation, Konstruktion, Dokumentation und Visualisierung von Software-Teilen und anderen Systemen“ (UML, 2020). In der UML gibt es Notationselemente, aus denen sich verschiedene Diagramme erzeugen lassen. Im Jahre 1999 stieß OMG die Entwicklung von UML 2.0 an. Dabei verdeutlicht jedes Diagramm eine bestimmte Perspektive auf das zu modellierende System und kann dem Entwickler, oder Nutzer einen guten Überblick auf die Software verschaffen.
+Es gibt verschiedene Modellierungssprachen, wie das Aktivitätsdiagramm welches die Ablaufmöglichkeiten eines Systems beziehungsweise Anwendungsfalls mit Aktionen darstellt. Wobei eine Aktion einen einzelnen Schritt darstellt und mit Kanten wird der Kontrollfluss angegeben.
 Bei einem Anwendungsfalldiagramm oder auch Use Case Diagram, wird das Verhalten eines Systems aus der Benutzersicht dargestellt. Diese beschreiben aber auch die geplante Funktionalität eines Systems. Anschließend wird noch ein Akteur benötigt, dieser kann zum Beispiel eine Person oder ein System sein und gibt an, was dieses System tun soll. (vgl. UML, 2021)
-Bei einem Klassendiagramm werden die Beziehungen zwischen den einzelnen Klassen verdeutlich sowie, welche Attribute und Methoden es in der jeweiligen klasse vorhanden sind. Zusätzlich ist noch ersichtlich um welche Datentypen es sich handelt und welche Attribute/Methoden public, private oder protected sind. Mit der Generalisierung wird angegeben in welcher Beziehung die jeweiligen Klassen zueinander stehen, dies wird mit einer durchgezogenen Linie und einem an einen der beiden enden dargestellt. Der Pfeil gibt an von welcher Klasse geerbt wird. (vgl. Klassendiagramm, 2021)
-Ein Zustandsdiagramm beschreibt den Lebenszyklus der Objekte einer Klasse und ist eine graphische Darstellung eines Zustandsautomaten welche auf dem Konzept der endlichen Automaten basieren. Mithilfe eines Zustandsdiagrammes kann dargestellt werden, in welchem zustand sich das betrachtete Objekt befindet und welches Verhalten diese Objekt in einer aktiven Klasse modelliert. (vgl. Endlicher\_Automat, 2021)
+Bei einem Klassendiagramm werden die Beziehungen zwischen den einzelnen Klassen verdeutlicht sowie, welche Attribute und Methoden in der jeweiligen Klasse vorhanden sind. Zusätzlich ist noch ersichtlich um welche Datentypen es sich handelt und welche Attribute/Methoden public, private oder protected sind. Mit der Generalisierung wird angegeben in welcher Beziehung die jeweiligen Klassen zueinander stehen, dies wird mit einer durchgezogenen Linie und einem Pfeil an einer der beiden enden dargestellt. Der Pfeil gibt an von welcher Klasse geerbt wird. (vgl. Klassendiagramm, 2021)
+Ein Zustandsdiagramm beschreibt den Lebenszyklus der Objekte einer Klasse und ist eine graphische Darstellung eines Zustandsautomaten welche auf dem Konzept der endlichen Automaten basieren. Mithilfe eines Zustandsdiagrammes kann dargestellt werden, in welchem zustand sich das betrachtete Objekt befindet und welches Verhalten dieses Objekt in einer aktiven Klasse modelliert. (vgl. Endlicher Automat, 2021)
 
 \begin{lstlisting}
-	https://de.wikipedia.org/wiki/Unified_Modeling_Language
-	https://de.wikipedia.org/wiki/Klassendiagramm
-	https://de.wikipedia.org/wiki/Endlicher_Automat
+	Unified Modeling Language. (19. Oktober 2020). In Wikipedia. Abgerufen am 4. Februar 2021, unter https://de.wikipedia.org/wiki/Unified_Modeling_Language
+	Klassendiagramm. (9. Dezember 2020). In Wikipedia. Abgerufen am 4. Februar 2021, unter https://de.wikipedia.org/wiki/Klassendiagramm
+	Endlicher Automat. (20. Januar 2021). In Wikipedia. Abgerufen am 4. Februar 2021, unter https://de.wikipedia.org/wiki/Endlicher_Automat
 \end{lstlisting}
