--- a/portfolio/abschnitte/aufgabe10.tex
+++ b/portfolio/abschnitte/aufgabe10.tex
@@ -10,7 +10,7 @@ Bei einer ein oder Ausgabe hat meinen ein Akzeptor oder einen Transduktor. Ein A
 Aber welche Automaten werden in der Praxis bei der Programmierung verwendet? Dafür kommen Endliche Automaten und Kellerautomaten in frage, da diese komplexe Probleme übersichtlich lösen lassen können. (vgl, Automat, 2021) 
 
 \begin{lstlisting}
-	https://de.wikipedia.org/wiki/Automat_(Informatik)
-	https://de.wikipedia.org/wiki/Determinismus_(Algorithmus)
-	https://de.wikipedia.org/wiki/Nichtdeterminismus
+	Automat (Informatik). (12. November 2020). In Wikipedia. Abgerufen am 6. Februar 2021, unter https://de.wikipedia.org/wiki/Automat_(Informatik)
+	Determinismus (Algorithmus). (13. September 2020). In Wikipedia. Abgerufen am 6. Februar 2021, unter https://de.wikipedia.org/wiki/Determinismus_(Algorithmus)
+	Nichtdeterminismus. (10. April 2018). In Wikipedia. Abgerufen am 6. Februar 2021, unter https://de.wikipedia.org/wiki/Nichtdeterminismus
 \end{lstlisting}
