--- a/portfolio/portfolio.tex
+++ b/portfolio/portfolio.tex
@@ -23,7 +23,7 @@
 %%% Protokoll: Beginn
 
 \input{abschnitte/aufgabe01.tex}
-%\input{abschnitte/aufgabe02.tex}
+\input{abschnitte/aufgabe02.tex}
 \input{abschnitte/aufgabe03.tex}
 \input{abschnitte/aufgabe04.tex}
 \input{abschnitte/aufgabe05.tex}
