--- a/portfolio/abschnitte/reflexion.tex
+++ b/portfolio/abschnitte/reflexion.tex
@@ -2,12 +2,16 @@
 
 \begin{itemize}
 	\item Was waren Ihre zwei größten Herausforderungen in diesem Modul?
-	\subitem Einmal die Aufsätze zu schreiben, da es mir bei einigen Themen schwer viel, aufgrund der menge an wichtigen Informationen. Diese aber nur in ein Paar setzen wiederzugeben.
-	\subitem Und andererseits haben wir eine Aufgabe zur Turing Maschine bekommen. Den egal was ich da
-	eingestellt hatte, sie wollte einfach nicht so wie ich es gerne hätte. 
+	\subitem Zum einen, die Umstellung, dass wir uns das Wissen selber beigringen mussten.
+	Obwohl uns schon sehr viel beigebracht wurde, mussten wir für viele aufgaben uns Bücher zu
+	hand nehmen oder im Internet recherchieren.
+	\subitem Und zum anderen, dass wir keine Präsents Vorlesung hatten. Dadurch fehlte der
+	Kontakt zu anderen mit studierenden. Wodurch man sich nicht wirklich mit anderen
+	studierenden austauschen konnte.
 	
-	\item Was zeigt das Portfolio von Ihnen und Ihrer Arbeit?
-	\subitem Was ich in diesem Modul gelernt habe.
+	\item Wie sind Sie mit diesen Herausforderungen umgegangen?
+	\subitem Nach kurzerzeit hatten wir neben der Whatsapp Gruppe noch einen Discord server,
+	wo sich die studierenden treffen können. So haben sich auch ein paar Lergruppen gebildet.
 	
 	\item Wo sehen Sie noch Fehlstellen und Lernmöglichkeiten ihrerseits?
 	\subitem Mich mehr mit Automaten beschäftigen.
